--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     
     compile 'org.springframework:spring-context:4.2.2.RELEASE'
+    compile 'org.hibernate:hibernate-core:5.0.2.Final'
 }
